BROKERS: Generate JWT Token

--- a/Sheenam/appsettings.Development.json
+++ b/Sheenam/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "6AD2EF4v89d4v9d84DE-Ada98f4as894B2C-48sd4v89d4v941-A984sv98d4v9805E-7045C855BA22r4g98s4g9es8sdg8d49g",
+    "Issuer": "http://localhost:5202",
+    "Audience": "http://localhost:5202"
   }
 }
